Api key now read in from external file

--- a/FootballStats.ipynb
+++ b/FootballStats.ipynb
@@ -36,7 +36,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 850,
+   "execution_count": 896,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Reading in API key\n",
+    "file = open(\"rapid_api_key.txt\")\n",
+    "rapid_api_key = file.read().strip(\"\\n\")\n",
+    "#Now saved as global variable, so can be used inside functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 894,
    "metadata": {
     "collapsed": true
    },
@@ -46,8 +58,9 @@
     "\n",
     "#Function to retrieve json object from API endpoint\n",
     "def makeRequest(url, querystring = {}):\n",
+    "    \n",
     "    headers = {\n",
-    "    'x-rapidapi-key': \"be5fa28e00msh131c81260ea9960p165cd5jsn0ab5a9447d39\",\n",
+    "    'x-rapidapi-key': rapid_api_key,\n",
     "    'x-rapidapi-host': \"elenasport-io1.p.rapidapi.com\"\n",
     "    }\n",
     "    \n",
@@ -102,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 851,
+   "execution_count": 895,
    "metadata": {},
    "outputs": [
     {
